# aforix

./: .gitignore  2.0.1  AGENTS.md  README.md  crear_carpetas.py  pyproject.toml  tree_aforix.txt
.github/workflows/: ci.yml
configs/examples/: main.yaml
configs/normalization/: flowtracker.yaml  molinete.yaml  nivus.yaml
configs/registries/: registry.yml
configs/sih/: estaciones.csv  instrumentos.csv  instrumentos_rangos.csv  selection_template.csv  sih.yaml  tipos_aforos.csv
configs/specs/: flowtracker.yaml  flowtracker_spec_v1.yml
docs/: 02_pipeline.md  03_cli.md  06_data_model.md  ARCHITECTURE.md  BATCH_GUIDE.md  BATCH_SYSTEM.md  CONFIGURATION_GUIDE.md  CORRELATION_GUIDE.md  INTERACTIVE_USAGE.md  LAUNCHERS_GUIDE.md  PRODUCTION_AUDIT_2026-05-11.md  QUALITY_METRICS_GUIDE.md  RELEASE_CHECKLIST.md  SECTION_PROFILES_ANALYSIS.md  SIH_CONFIGURATION.md  SIH_EXPORT.md  SIH_EXPORT_DESIGN.md  SIH_MATCHING.md  SIH_TROUBLESHOOTING.md  STAGE_DISCHARGE_ANALYSIS.md
docs/design/: metadata_extraction_policy_pr2.md  metadata_policy_pr1.md
launchers/: README.md
launchers/linux/: README.md  aforix_shell.sh  run_analysis_pipeline.sh  run_batch_file.sh  run_consolidated_pipeline.sh  run_custom_batch_template.sh  run_full_ingest_pipeline.sh  (+1 more)
scripts/: audit_pipeline_outputs.py  check_build_outputs.py  check_ingest_outputs.py  check_molinete_ingest.py  copiar_archivos_dis.py  copiar_archivos_xml.py  modificar_xml_dis.py  test_normalization_registry.py  test_normalize_run.py  validate_hydraulic_consistency.py
tests/: test_metadata.py  test_normalizer_metadata.py
(+175 files in other folders)
