[project]
name = "aforix"
version = "0.1.0"
description = "Python library for processing discharge gauging data."
requires-python = ">=3.10"
dependencies = [
    "typer",
    "pandas",
    "numpy",
    "pyyaml",
    "openpyxl",
]

[project.scripts]
aforix = "aforix.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"