[project]
name = "aforix"
version = "0.1.0"
description = "Python library for processing discharge gauging data."
requires-python = ">=3.10"
dependencies = [
    "typer",
    "pandas",
    "numpy",
    "pyyaml",
    "openpyxl",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
aforix = "aforix.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
